fix sonarlint issues